--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -10,7 +10,7 @@ const menu = [
 		label: 'About'
 	},
 	{
-		link: '/posts/',
+		link: '/blog/',
 		label: 'Posts'
 	},
 	{
@@ -35,7 +35,7 @@ const menu = [
 		<nav class='flex gap-4 items-center justify-between py-3'>
 			<h2 class='m-0'>
 				<a href='/' class='flex gap-4 items-center text-xl font-black uppercase'>
-					<!-- You can use your site logo, rounded ava or simply your site name here-->
+					<!-- You can use your site logo, rounded ava or simply your site name-->
           <Image src={AvaLogo} alt='Your site name' class="rounded-full w-11 border-white border-2 shadow-lg"/> 
 					<!-- {SITE_TITLE} -->
 				</a>
