Update index.astro to use /blog/ links instead of /posts/

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const top6Projects = publishedProjects
       <div class='mt-12 mb-12 -mx-6 px-6 bg-zinc-50 dark:bg-zinc-900/80 p-6 border-t border-b border-zinc-200 dark:border-zinc-700'>
         <div class="flex justify-between gap-2 border-b mb-6 pb-3 dark:border-b-zinc-700">
           <h2 class="text-2xl font-bold mb-0">Recent Posts</h2>
-          <a href="/posts/" class="inline-block py-2 underline dark:prose-invert">All posts &raquo;</a>
+          <a href="/blog/" class="inline-block py-2 underline dark:prose-invert">All posts &raquo;</a>
         </div>
         <div>
           {
