--- a/src/pages/project-slug.astro
+++ b/src/pages/project-slug.astro
@@ -24,6 +24,11 @@ type Props = {
 };
 
 const { project } = Astro.props;
+
+if (!project) {
+  return Astro.redirect('/404');
+}
+
 const { Content } = await project.render();
 
 // Find related posts if any are specified
