a number of fixes to posts & projects

--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -76,7 +76,7 @@ const description = 'Articles, guides, tutorials about front-end development.';
       <p class="text-lg text-gray-700 dark:text-gray-300 mb-3">
         No posts found matching your filters.
       </p>
-      <a href="/posts" class="inline-block px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 transition-colors">
+      <a href="/posts/" class="inline-block px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 transition-colors">
         Clear all filters
       </a>
     </div>
