--- a/src/pages/tag/[tag].astro
+++ b/src/pages/tag/[tag].astro
@@ -72,7 +72,7 @@ const { tag, posts, projects } = Astro.props;
     <!-- Navigation links -->
     <div class="mt-12 pt-6 border-t dark:border-zinc-800 flex flex-wrap gap-4">
       <a href="/project" class="text-blue-500 hover:underline">← All Projects</a>
-      <a href="/posts" class="text-blue-500 hover:underline">← All Posts</a>
+      <a href="/posts/" class="text-blue-500 hover:underline">← All Posts</a>
       <a href="/" class="text-blue-500 hover:underline">← Home</a>
     </div>
   </div>
